[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnd_warehouse_management"
dynamic = ["version"]
description = "RND Warehouse Management System for ERPNext with SAP-style workflow integration"
authors = [
    {name = "RogerBoy", email = "support@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "rnd_warehouse_management.__version__.__version__"}

[tool.uv]
constraint-dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]
