[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnd_warehouse_management"
version = "2.1.0"
description = "RND Warehouse Management System for ERPNext with SAP-style workflow integration"
authors = [
    {name = "RogerBoy", email = "rogerboy38@hotmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[tool.uv]
constraint-dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2"
]
